# miniVim

./: README.md
miniVim/: CMakeLists.txt  build.sh  mainwindow.ui
miniVim/includes/: Esc.h  Mode.h  SyntaxHighlight.h  mainwindow.h
miniVim/srcs/: Esc.cpp  Mode.cpp  cmd_mode.cpp  createfile.cpp  eventFilter.cpp  indent.cpp  keybinds.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mode.cpp  modeTogglers.cpp  shortcuts.cpp  syntaxHighlight.cpp  triggers.cpp  vis_mode.cpp
